--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       -Dhttp.address=0.0.0.0
       -Dhttp.port=$${PORT}
       -Dmongodb.db=$${MONGO_DB}
-      -Dmongodb.url=$${MONGO_HOST}:$${MONGO_PORT}
+      -Dmongodb.url=$${MONGO_HOST}
       -Dmongodb.port=$${MONGO_PORT}
       -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
       \""
