added debug mode for braingames data delivery

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,7 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 datastore {
   key = "something-secure"
   name = "localhost"
+  debugMode = true
   oxalis{
     uri = "localhost:9000"
     secured = false
