--- a/conf/application_dev.conf
+++ b/conf/application_dev.conf
@@ -22,6 +22,7 @@ application{
 datastore{
   key = "something-secure"
   name = "localhost"
+  debugMode = false
   oxalis{
     uri = "localhost:"${http.port}
     secured = false
