--- a/conf/application_prod.conf
+++ b/conf/application_prod.conf
@@ -14,6 +14,7 @@ http.uri="https://webknossos.brain.mpg.de"
 datastore {
   key = "d2bf5319-c214-47af-ac1f-63ce460fb1d9"
   name = "localhost"
+  debugMode = false
   oxalis{
     uri = "localhost:"${http.port}
     secured = false
