updated to latest braingames libs (volume upload support)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@ application{
 datastore{
   key = "something-secur3"
   name = "standalone-9090"
+  debugMode = false
   oxalis{
     uri = "localhost:9000"
     secured = false
