--- a/conf/application_oxalistwo.conf
+++ b/conf/application_oxalistwo.conf
@@ -14,3 +14,6 @@ braingames.binary.baseFolder = /srv/binaryData
 # Defining the listening address:
 http.address="127.0.0.1"
 http.uri="https://oxalistwo.webknossos.io"
+
+# Avoid the creation of a pid file
+pidfile.path = "/dev/null"
