fixed data store name

--- a/conf/application_oxalistwo.conf
+++ b/conf/application_oxalistwo.conf
@@ -2,7 +2,7 @@ include "application.conf"
 include "oxalistwo_secret.conf"
 
 datastore{
-  name = "standalone-oxalistwo"
+  name = "oxalistwo"
   oxalis{
     uri = "webknossos.brain.mpg.de"
     secured = true
