--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.11.6",
@@ -40,7 +42,7 @@
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "^1.13.1",
+    "webpack": "^1.14.0",
     "worker-loader": "^0.6.0"
   },
   "scripts": {
