Implemented single sign on

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,6 +51,7 @@ application{
     enableDevAutoLogin=true
     enableDevAutoVerify=false
     defaultUser="scmboy@scalableminds.com"
+    ssoKey="adert345wvfs4rq3qdf"
   }
 }
 
