--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.11.6",
-    "cjsx-loader": "^3.0.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-react-transform": "^4.0.0",
-    "coffee-script": "^1.8.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -48,10 +50,12 @@
   },
   "scripts": {
     "test": "node_modules/.bin/babel-node app/assets/javascripts/test/run-jasmine.js",
-    "test-e2e": "node_modules/.bin/wdio wdio.conf.js"
+    "test-e2e": "node_modules/.bin/wdio wdio.conf.js",
+    "lint": "./node_modules/.bin/eslint app/assets/javascripts/"
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
+    "babel-eslint": "^7.1.1",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
@@ -66,6 +70,7 @@
     "clipboard-js": "^0.2.0",
     "d3": "^3.5.12",
     "es6-promise": "^3.0.2",
+    "eslint-import-resolver-webpack": "^0.8.0",
     "font-awesome": "^4.5.0",
     "form-syphon": "0.0.5",
     "jasny-bootstrap": "^3.1.3",
