webpack2 support WIP

--- a/package.json
+++ b/package.json
@@ -13,23 +13,14 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.9.0",
-    "babel-runtime": "^6.11.6",
-    "cjsx-loader": "^3.0.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-react-transform": "^4.0.0",
-    "coffee-script": "^1.8.0",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.26.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.9.0",
-    "imports-loader": "^0.6.4",
+    "imports-loader": "^0.7.0",
     "isomorphic-fetch": "^2.2.0",
     "jasmine": "^2.5.2",
     "less": "^2.7.1",
@@ -37,14 +28,13 @@
     "mock-require": "^1.2.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
-    "three.js": "georgwiese/three.js#scm_oxalis",
     "url-loader": "^0.5.7",
     "wdio-jasmine-framework": "^0.2.3",
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "^1.14.0",
-    "worker-loader": "^0.6.0"
+    "webpack": "^2.2.0-rc.3",
+    "worker-loader": "^0.7.1"
   },
   "scripts": {
     "test": "node_modules/.bin/babel-node app/assets/javascripts/test/run-jasmine.js",
@@ -80,6 +70,7 @@
     "react-dom": "^15.1.0",
     "scroll-into-view-if-needed": "^1.0.2",
     "stats.js": "^1.0.0",
+    "three.js": "georgwiese/three.js#scm_oxalis",
     "tween.js": "^16.3.1",
     "underscore": "^1.8.3",
     "webcola": "^3.1.3",
