--- a/package.json
+++ b/package.json
@@ -13,18 +13,11 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.9.0",
-    "babel-runtime": "^6.11.6",
-    "cjsx-loader": "^3.0.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-react-transform": "^4.0.0",
-    "coffee-script": "^1.8.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
