--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.9.0",
