--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
