applied PR feedback #1582

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
       "ga": false,
       "browser": false,
       "Airbrake": false,
-      "routes": false
+      "routes": false,
+      "jsRoutes": false,
     },
     "rules": {
       "quotes": ["error", "double"],
