added linting to circle ci build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
       "browser": false,
       "Airbrake": false,
       "routes": false,
-      "jsRoutes": false,
+      "jsRoutes": false
     },
     "rules": {
       "quotes": ["error", "double"],
