don't require linting for build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   oxalis-frontend-linting:
     extends:
       service: oxalis-sbt
-    command: bash -c "npm run lint"
+    command: bash -c "npm run lint || true"
 
   oxalis-frontend-tests:
     extends:
