--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
       "react/jsx-filename-extension": "off",
       "radix": "off",
       "no-bitwise": "off",
+      "no-continue": "off",
+      "no-else-return": "off",
       "no-mixed-operators": "off",
       "no-underscore-dangle": ["error", { "allow": ["__guard__", "__range__"] }],
       "no-restricted-syntax": "warn",
