--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,16 @@ services:
       - PORT=9000
       - MODE=dev
 
+  webknossos:
+    image: scalableminds/webknossos:$DOCKER_TAG
+    ports:
+      - "9000:9000"
+    links:
+      - mongo
+    environment:
+      - PORT=9000
+      - MODE=dev
+
   oxalis-sbt:
     image: scalableminds/sbt:$SBT_VERSION_TAG
     volumes:
