update linting rules, linting no-unused-vars, fix flycam2d #1596

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,16 +31,22 @@
       "class-methods-use-this": "off",
       "operator-assignment": "warn",
       "react/jsx-filename-extension": "off",
+      "react/prop-types": "off",
       "radix": "off",
       "no-bitwise": "off",
+      "no-confusing-arrow":  "off",
+      "no-else-return": "off",
       "no-mixed-operators": "off",
-      "no-underscore-dangle": "off",
+      "no-multi-str": "off",
+      "no-param-reassign": "warn",
+      "no-plusplus": "off",
       "no-restricted-syntax": "warn",
       "no-restricted-properties": ["off", {"object": "Math", "property": "pow"}],
       "no-restricted-syntax": ["off", "ForInStatement", "ForOfStatement"],
-      "no-param-reassign": "warn",
-      "no-plusplus": "off",
+      "no-underscore-dangle": "off",
       "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+      "no-use-before-define": ["error", { "functions": false }],
+      "one-var": ["error", "never"],
       "import/extensions": ["warn", { "js": "never", "jsx": "always" }],
       "import/no-unresolved": "off"
     }
