linting one-var, no-use-before-define, small other fixes, remove unused method #1596

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
       "radix": "off",
       "no-bitwise": "off",
       "no-confusing-arrow":  "off",
+      "no-continue": "warn",
       "no-else-return": "off",
       "no-mixed-operators": "off",
       "no-multi-str": "off",
