restrict-syntax disallow ForInStatement, fix last occurences  #1596

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
       "no-plusplus": "off",
       "no-restricted-syntax": "warn",
       "no-restricted-properties": ["off", {"object": "Math", "property": "pow"}],
-      "no-restricted-syntax": ["off", "ForInStatement", "ForOfStatement"],
+      "no-restricted-syntax": ["error", "ForInStatement"],
       "no-underscore-dangle": "off",
       "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
       "no-use-before-define": ["error", { "functions": false }],
