add three as a core module to avoid import errors #1596

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     "parser": "babel-eslint",
     "settings": {
       "import/resolver": "webpack",
-      "import/ignore": ["$three.*"]
+      "import/ignore": ["$three.*"],
+      "import/core-modules": ["three"]
     },
     "globals": {
       "ga": false,
