--- a/circle.yml
+++ b/circle.yml
@@ -17,22 +17,20 @@ dependencies:
   override:
     - docker pull scalableminds/sbt:$SBT_VERSION_TAG
     - docker-compose run sbt clean compile stage
-    - docker build -t scalableminds/webknossos-datastore:$CIRCLE_BUILD_NUM .
+    - docker build -t scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM .
 
 test:
   override:
-    - DOCKER_TAG=$CIRCLE_BUILD_NUM docker-compose up -d webknossos-datastore:
+    - DOCKER_TAG=$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM docker-compose up -d webknossos-datastore:
         background: true
-    - sleep 10
+    - sleep 5
     - curl http://localhost:9090/
 
 deployment:
   hub:
     branch: /.*/
     commands:
-      - docker tag scalableminds/webknossos-datastore:$CIRCLE_BUILD_NUM scalableminds/webknossos-datastore:branch-$CIRCLE_BRANCH
-      - docker tag scalableminds/webknossos-datastore:$CIRCLE_BUILD_NUM scalableminds/webknossos-datastore:commit-$CIRCLE_SHA1
-      - docker push scalableminds/webknossos-datastore:$CIRCLE_BUILD_NUM
-      - docker push scalableminds/webknossos-datastore:branch-$CIRCLE_BRANCH
-      - docker push scalableminds/webknossos-datastore:commit-$CIRCLE_SHA1
+      - docker tag scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM scalableminds/webknossos-datastore:$CIRCLE_BRANCH
+      - docker push scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM
+      - docker push scalableminds/webknossos-datastore:$CIRCLE_BRANCH
       - docker logout
