--- a/circle.yml
+++ b/circle.yml
@@ -17,11 +17,11 @@ dependencies:
   override:
     - docker pull scalableminds/sbt:$SBT_VERSION_TAG
     - docker-compose run sbt clean compile stage
-    - docker build -t scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM .
+    - docker build -t scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
 
 test:
   override:
-    - DOCKER_TAG=$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM docker-compose up -d webknossos-datastore:
+    - DOCKER_TAG=${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} docker-compose up -d webknossos-datastore:
         background: true
     - sleep 5
     - curl http://localhost:9090/
@@ -30,7 +30,7 @@ deployment:
   hub:
     branch: /.*/
     commands:
-      - docker tag scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM scalableminds/webknossos-datastore:$CIRCLE_BRANCH
-      - docker push scalableminds/webknossos-datastore:$CIRCLE_BRANCH__$CIRCLE_BUILD_NUM
-      - docker push scalableminds/webknossos-datastore:$CIRCLE_BRANCH
+      - docker tag scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
+      - docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+      - docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
       - docker logout
