rename oxalis to webknossos in config files

--- a/circle.yml
+++ b/circle.yml
@@ -18,15 +18,15 @@ dependencies:
     - "node_modules"
   override:
     - docker pull scalableminds/sbt:$SBT_VERSION_TAG
-    - docker-compose run oxalis-sbt clean compile stage
-    - docker build -t scalableminds/oxalis:$CIRCLE_BUILD_NUM .
+    - docker-compose run sbt clean compile stage
+    - docker build -t scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
 
 test:
   override:
-    - docker-compose run oxalis-frontend-linting
-    - docker-compose run oxalis-frontend-tests
-    - docker-compose run oxalis-e2e-tests
-    - DOCKER_TAG=$CIRCLE_BUILD_NUM docker-compose up -d oxalis:
+    - docker-compose run webknossos-frontend-linting
+    - docker-compose run webknossos-frontend-tests
+    - docker-compose run webknossos-e2e-tests
+    - DOCKER_TAG=${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} docker-compose up -d webknossos:
         background: true
     - sleep 10
     - ./test/infrastructure/deployment.bash
