remove no-duplicate-imports linting rule as it doesn't support flow type imports, however import/no-duplicates does and is still enabled

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       "no-bitwise": "off",
       "no-confusing-arrow":  "off",
       "no-continue": "warn",
+      "no-duplicate-imports": "off",
       "no-else-return": "off",
       "no-mixed-operators": "off",
       "no-multi-str": "off",
