--- a/.flowconfig
+++ b/.flowconfig
@@ -14,6 +14,7 @@
 <PROJECT_ROOT>/public/.*
 <PROJECT_ROOT>/test/.*
 <PROJECT_ROOT>/tools/.*
+<PROJECT_ROOT>/node_modules/flow-coverage-report/
 
 [options]
 module.ignore_non_literal_requires=true
