--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "test": "node_modules/.bin/babel-node app/assets/javascripts/test/run-jasmine.js",
     "test-e2e": "node_modules/.bin/wdio wdio.conf.js",
     "flow": "flow check; test $? -eq 0 -o $? -eq 2",
+    "flow-coverage": "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i ./app/assets/javascripts/**/*.js -i ./app/assets/javascripts/**/*.jsx -x ./app/assets/javascripts/test/**/*.js -t html -t json -t text",
     "lint": "./node_modules/.bin/eslint --quiet app/assets/javascripts/"
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
@@ -71,6 +72,7 @@
     "clipboard-js": "^0.2.0",
     "d3": "^3.5.12",
     "es6-promise": "^3.0.2",
+    "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
     "form-syphon": "0.0.5",
     "jasny-bootstrap": "^3.1.3",
