--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.9.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-import-resolver-webpack": "^0.8.0",
@@ -26,26 +28,25 @@
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.8.0",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.9.0",
     "flow-bin": "^0.37.4",
-    "imports-loader": "^0.6.4",
+    "imports-loader": "^0.7.0",
     "isomorphic-fetch": "^2.2.0",
     "jasmine": "^2.5.2",
-    "less": "^2.7.1",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mock-require": "^1.2.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
-    "three.js": "georgwiese/three.js#scm_oxalis",
     "url-loader": "^0.5.7",
     "wdio-jasmine-framework": "^0.2.19",
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "^1.14.0",
-    "worker-loader": "^0.6.0"
+    "webpack": "2.2.0",
+    "worker-loader": "^0.7.1"
   },
   "scripts": {
     "test": "node_modules/.bin/babel-node app/assets/javascripts/test/run-jasmine.js",
@@ -55,8 +56,6 @@
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-eslint": "^7.1.1",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
@@ -85,6 +84,7 @@
     "react-dom": "^15.1.0",
     "scroll-into-view-if-needed": "^1.0.2",
     "stats.js": "^1.0.0",
+    "three.js": "georgwiese/three.js#scm_oxalis",
     "tween.js": "^16.3.1",
     "underscore": "^1.8.3",
     "webcola": "3.3.0",
