--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
       },
       "exclude": [
         "transform-regenerator"
-      ]
+      ],
+      "modules": false,
     }],
     "react",
   ],
