--- a/.babelrc
+++ b/.babelrc
@@ -21,5 +21,6 @@
     "transform-async-to-generator",
     "transform-class-properties",
     "transform-flow-strip-types",
+    "syntax-dynamic-import",
   ],
 }
