--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,15 +2,14 @@
 application {
   name    = "standalone-datastore"
   branch  = local
+  # The secret key is used to secure cryptographics functions.
+  secret="/tfger=?!359=(623de35]/3eg>34>r9/of/45gh654>?!654g/5f4//hbfw245<"
 }
 
 # Defining the listening address:
-http.address="127.0.0.1"
-http.uri="http://localhost:9090"
-
-application{
-  # The secret key is used to secure cryptographics functions.
-  secret="/tfger=?!359=(623de35]/3eg>34>r9/of/45gh654>?!654g/5f4//hbfw245<"
+http{
+  address = "0.0.0.0"
+  uri = "http://localhost:9090"
 }
 
 datastore{
@@ -26,15 +25,15 @@ datastore{
 # Binary data settings
 # ~~~~~
 braingames.binary{
-  cacheMaxSize = 1000
-  loadTimeout = 10
-  saveTimeout = 10
+  cacheMaxSize = 1000 # in entries (each entry is 2 MB)
+  loadTimeout = 10 # in seconds
+  saveTimeout = 10 # in seconds
   baseFolder = binaryData
   userBaseFolder = userBinaryData
   
   changeHandler{
     enabled = true
-    tickerInterval = 10
+    tickerInterval = 10 # in minutes
   }
 
   useRemote = false
