--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.9.0",
     "css-loader": "^0.26.1",
+    "documentation": "^4.0.0-beta.18",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-import-resolver-webpack": "^0.8.0",
