--- a/.flowconfig
+++ b/.flowconfig
@@ -5,7 +5,7 @@
 <PROJECT_ROOT>/logs/.*
 <PROJECT_ROOT>/project/.*
 <PROJECT_ROOT>/target/.*
-<PROJECT_ROOT>/testdb/.*
+<PROJECT_ROOT>/test/db/.*
 <PROJECT_ROOT>/userBinaryData/.*
 <PROJECT_ROOT>/binaryData/.*
 <PROJECT_ROOT>/conf/.*
