clean db-files (#1666)
* removed dummy-db

* move testdb

* clean dummy-db usage

--- a/.flowconfig
+++ b/.flowconfig
@@ -5,11 +5,10 @@
 <PROJECT_ROOT>/logs/.*
 <PROJECT_ROOT>/project/.*
 <PROJECT_ROOT>/target/.*
-<PROJECT_ROOT>/testdb/.*
+<PROJECT_ROOT>/test/db/.*
 <PROJECT_ROOT>/userBinaryData/.*
 <PROJECT_ROOT>/binaryData/.*
 <PROJECT_ROOT>/conf/.*
-<PROJECT_ROOT>/dummy-db/.*
 <PROJECT_ROOT>/lib/.*
 <PROJECT_ROOT>/public/.*
 <PROJECT_ROOT>/test/.*
