--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,6 @@
       "import/extensions": ["warn", { "js": "never", "jsx": "always" }],
       "import/no-unresolved": "off",
       "quote-props": ["error", "as-needed", {"numbers": true}],
-      "react/sort-comp": "off"
+      "react/sort-comp": ["error", {"order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]}]
     }
 }
