--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
+    "antd": "^2.7.0",
+    "babel-plugin-import": "^1.1.0",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
