--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
     "moment": "^2.10.6",
     "nouislider": "^8.2.1",
     "pako": "^0.2.8",
-    "react": "^15.1.0",
+    "react": "^15.4.2",
     "react-dom": "^15.1.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "scroll-into-view-if-needed": "^1.0.2",
     "stats.js": "^1.0.0",
     "three": "^0.84.0",
