--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
     "scroll-into-view-if-needed": "^1.0.2",
     "stats.js": "^1.0.0",
     "three": "^0.84.0",
