--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
     "form-syphon": "0.0.5",
+    "immutability-helper": "^2.1.1",
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.0.0",
     "keyboardjs": "^2.2.0",
