--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "imports-loader": "^0.7.0",
     "isomorphic-fetch": "^2.2.0",
     "jasmine": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mock-require": "^1.2.1",
