added auto admin & fixed auto user verification

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,6 +50,7 @@ application{
   authentication{
     enableDevAutoLogin=true
     enableDevAutoVerify=false
+    enableDevAutoAdmin=false
     defaultUser="scmboy@scalableminds.com"
     ssoKey="adert345wvfs4rq3qdf"
   }
