--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,20 +46,30 @@ services:
       - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/root/.sbt"
       - "${DOCKER_CACHE_PREFIX:-~}/.yarn-cache:/usr/local/share/.cache/yarn"
 
+  frontend-dependencies:
+    extends:
+      service: sbt
+    command: bash -c "yarn install"
+
   frontend-linting:
     extends:
       service: sbt
-    command: bash -c "npm run lint"
+    command: bash -c "yarn run lint"
 
   frontend-flow:
     extends:
       service: sbt
-    command: bash -c "npm run flow"
+    command: bash -c "yarn run flow"
 
   frontend-tests:
     extends:
       service: sbt
-    command: bash -c "npm test"
+    command: bash -c "yarn test"
+
+  frontend-docs:
+    extends:
+      service: sbt
+    command: bash -c "yarn run docs"
 
   e2e-tests:
     extends:
