fixed stylesheets order for and #1691

--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,6 @@
     "transform-async-to-generator",
     "transform-class-properties",
     "transform-flow-strip-types",
-    ["import", { libraryName: "antd", style: "css" }]
+    ["import", { libraryName: "antd" }]
   ],
 }
