--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
+    "antd": "^2.7.0",
+    "babel-plugin-import": "^1.1.0",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
     "backbone.marionette": "^3.0.0",
@@ -77,6 +79,7 @@
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
     "form-syphon": "0.0.5",
+    "immutability-helper": "^2.1.1",
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.0.0",
     "keyboardjs": "^2.2.0",
@@ -85,8 +88,11 @@
     "moment": "^2.10.6",
     "nouislider": "^8.2.1",
     "pako": "^0.2.8",
-    "react": "^15.1.0",
+    "react": "^15.4.2",
     "react-dom": "^15.1.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
     "scroll-into-view-if-needed": "^1.0.2",
     "stats.js": "^1.0.0",
     "three": "^0.84.0",
