--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.1.0",
     "react-redux": "^5.0.2",
+    "reduce-reducers": "^0.1.2",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.3",
     "scroll-into-view-if-needed": "^1.0.2",
