--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lodash": "^4.13.1",
     "mjs": "^1.0.0",
     "moment": "^2.10.6",
+    "monet": "^0.8.10",
     "nouislider": "^8.2.1",
     "pako": "^0.2.8",
     "react": "^15.4.2",
