implemented most reducers #1709

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "classnames": "^2.2.5",
     "clipboard-js": "^0.2.0",
     "d3": "^3.5.12",
+    "data.maybe": "^1.2.2",
     "es6-promise": "^3.0.2",
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
@@ -86,7 +87,6 @@
     "lodash": "^4.13.1",
     "mjs": "^1.0.0",
     "moment": "^2.10.6",
-    "monet": "^0.8.10",
     "nouislider": "^8.2.1",
     "pako": "^0.2.8",
     "react": "^15.4.2",
