--- a/package.json
+++ b/package.json
@@ -92,10 +92,10 @@
     "react": "^15.4.2",
     "react-dom": "^15.1.0",
     "react-redux": "^5.0.2",
-    "reduce-reducers": "^0.1.2",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.3",
     "scroll-into-view-if-needed": "^1.0.2",
+    "seamless-immutable": "^7.0.1",
     "stats.js": "^1.0.0",
     "three": "^0.84.0",
     "tween.js": "^16.3.1",
