--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-register": "^6.9.0",
     "css-loader": "^0.26.1",
     "documentation": "^4.0.0-beta.18",
@@ -40,6 +41,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mock-require": "^1.2.1",
+    "redux-logger": "^2.8.2",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
