--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mock-require": "^1.2.1",
+    "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
